[package]
name = "arknights-downloader"
version = "0.1.0"
edition = "2021"
authors = ["ose20"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19"
url = "2.2"
anyhow = "1"