[package]
name = "arknights-downloader"
version = "0.1.0"
edition = "2021"
authors = ["ose20"]
description = "アークナイツのwikiから各種画像を一括でダウンロードするCLIツール"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19"
url = "2.2"
anyhow = "1"